--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -11,7 +11,7 @@ jobs:
     name: Update this repo's README
     runs-on: ubuntu-latest
     steps:
-      - uses: ribeiroevandro/waka-readme-stats@feat/add_pt-BR_location #PLEASE USE MASTER BRANCH
+      - uses: anmol098/waka-readme-stats@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
