--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -3,8 +3,8 @@ name: Waka Readme
 on:
   workflow_dispatch:
   schedule:
-    # Runs at 00:00AM UTC
-    - cron: '0 0 * * *'
+    # Runs at 00:30 AM BRT (03:30 AM UTC)
+    - cron: '30 3 * * *'
 
 jobs:
   update-readme:
@@ -18,4 +18,4 @@ jobs:
           SHOW_PROJECTS: "False"
           SHOW_LINES_OF_CODE: "True"
           SHOW_LOC_CHART: "False"
-          LOCALE: "en"
+          LOCALE: "pt"
